# minimal-commands

./: .gitignore  Cargo.toml  README.md
cat/: Cargo.toml
grep/: Cargo.toml
grep/src/: lib.rs  main.rs
poem-store/: .env  Cargo.toml
poem-store/src/: commands.rs  db.rs  handler.rs  main.rs  types.rs
weather/: Cargo.toml
weather/src/: main.rs
